--- a/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
+++ b/RemTool/ClientApp/src/app/admin/tooltypes-page/tooltypes-page.component.html
@@ -1,10 +1,15 @@
 <!-- Создание инструмента -->
-<button *ngIf="!addToolFlag;" class="create-tool__btn" (click)="addToolType()">Создать инструмент</button>
+<section class="tool-btns">
+  <button *ngIf="!addToolFlag;" class="create-tool__btn button_ok" (click)="addToolType()">Создать инструмент</button>
+  <button *ngIf="!addToolFlag;" class="button_light" (click)="refreshSearch()">Обновить базу данных поиска</button>
+</section>
 
 <!-- Форма добавления инструмента -->
-<section *ngIf="addToolFlag" [ngClass]="{
+<section *ngIf="addToolFlag"
+[ngClass]="{
   'create-tool': true,
-  'display-none': false}">
+  'display-none': false
+}">
 
 <!-- <script>
   alert('hjk');
@@ -13,6 +18,11 @@
 <div class="create-tool__item">
   <label>Название</label>
   <input type="text" [(ngModel)]="toolType.name" class="form-control" placeholder="Название инструмента" />
+</div>
+
+<div class="create-tool__item">
+  <label>ID</label>
+  <p>{{toolType.id}}</p>
 </div>
 
   <div class="create-tool__item">
@@ -122,7 +132,7 @@
 <hr>
 
 <!-- Добавление инфо об инструменте -->
-<quill-editor [(ngModel)]="this.toolType.info"></quill-editor>
+<!-- <quill-editor [(ngModel)]="this.toolType.info"></quill-editor> -->
 
 <div>
   <button (click)="saveToolType()" class="btn btn-success">
@@ -140,6 +150,7 @@
   <div class="tool" *ngFor="let tt of toolTypes; index as i">
     <h4 class="tool__title">
       {{tt.name}}
+      <!-- {{tt.id}} -->
     </h4>
     <img class="tool__image" *ngIf="!!tt.imgRefenrence" src={{tt.imgRefenrence}} alt="">
     <div class="saved-tool__btns">
