--- a/RemTool/ClientApp/src/app/send-request/send-request.component.scss
+++ b/RemTool/ClientApp/src/app/send-request/send-request.component.scss
@@ -10,7 +10,10 @@
     z-index: 999;
 }
 
+
+
 .request-form {
+    overflow: hidden;
     box-shadow: var(--shadow);
     border: 1px solid var(--orange-color);
     position: absolute;
@@ -87,6 +90,9 @@
         }
 
     }
+
+
+    
     
     & input + span, textarea + span {
         position: absolute;
@@ -112,6 +118,19 @@
         padding: 10px 16px;
         height: 150px;
     }
+}
+
+.thank-you {
+    box-sizing: border-box;
+    font-size: 20px;
+    line-height: 24px;
+    padding: 20px;
+    bottom: 0;
+    left: 0;
+    position: absolute !important;
+    z-index: 8;
+    height: 100%;
+    width: 100%;
 }
 
 .request-form__email{
