--- a/RemTool/ClientApp/src/styles.scss
+++ b/RemTool/ClientApp/src/styles.scss
@@ -13,6 +13,7 @@
     --orange-color: #E2632A; //rgb(226,99,42)
     --alarm-color: #E2352A;
     --green-color: #409D3E;
+    --dark-green-color: #2a6829;
     --grey-grad: linear-gradient(145deg, #CED1E9 0%, #EFF0F8 100%);
     --shadow: 0px 4px 8px 0px rgba(56, 56, 56, 0.28);
 }
@@ -29,6 +30,10 @@ body {
     box-sizing: border-box;
     // overflow: hidden;
     // height: 100%;
+}
+
+.visibility-hidden {
+    visibility: hidden;
 }
 
 .main-h2 {
@@ -53,32 +58,57 @@ body {
 // Large devices (desktops, less than 1200px)
 @media (max-width: 1199.98px) {  }
 
-.button_light {
+.button_light, .button_ok {
+    display: block;
     font-family: 'Jost', sans-serif;
     font-weight: 600;
     height: 34px;
+    // width: fit-content;
     font-size: 14px;
+    line-height: 30px;
     color: var(--dark-color);
     background-color: var(--light-color);
-    border: none;
+    outline: none;
+    box-sizing: border-box;
     border-radius: 6px;
     padding: 0 16px;
     white-space: nowrap;
-    &:hover {
-        color: var(--orange-color);
-    }
+    cursor: pointer;
+    border: 2px solid var(--light-color);
+    transition: transform 120ms ease;
     &:active {
         background-color: var(--grey-color);
+        border: 2px solid var(--orange-color);
+        box-sizing: border-box;
+        transform: scale(0.96);
+        color: var(--orange-color);
     }
     &:focus {
         color: var(--orange-color);
-        // box-sizing: border-box;
+        box-sizing: border-box;
         border: 2px solid var(--orange-color);
-        padding: 0 14px;
+        // padding: 0 14px;
     }
     &:disabled {
         color: var(--grey-color);
     }
+}
+
+@media (hover: hover) {
+    .button_light, .button_ok {
+        &:hover {
+            color: var(--orange-color);
+        }
+    }
+}
+
+.button_ok {
+    border: 2px solid var(--green-color);
+    background-color: var(--green-color);
+    &:active {
+        background-color: var(--dark-green-color);
+    }
+
 }
 
 .nav {
