--- a/RemTool/ClientApp/src/styles.scss
+++ b/RemTool/ClientApp/src/styles.scss
@@ -91,6 +91,9 @@ body {
     }
     &:disabled {
         color: var(--grey-color);
+        &:hover {
+            color: var(--grey-color);
+        }
     }
 }
 
