--- a/RemTool/ClientApp/src/app/send-request/send-request.component.html
+++ b/RemTool/ClientApp/src/app/send-request/send-request.component.html
@@ -14,7 +14,7 @@
             <button class="request-form__close" (click)="formPopupClose($event)"></button>
             <div
                 [ngClass]="{
-                    'visibility-hidden': thankYouMessage
+                    'visibility-hidden': thankYouFlag
                 }"
                 class="request-form__email">
                 <input type="email" maxlength="40" formControlName="email" placeholder=" ">
@@ -27,11 +27,11 @@
                 </span>
                 <!-- <span  (click)="inputFocus($event)">{{!!requestForm.get('email').errors}}</span> -->
             </div>
-            <div [ngClass]="{'visibility-hidden': thankYouMessage}">
+            <div [ngClass]="{'visibility-hidden': thankYouFlag}">
                 <input class="request-form__name" type="text" maxlength="40" formControlName="name" placeholder=" ">
                 <span (click)="inputFocus($event)">Ваше имя</span>
             </div>
-            <div [ngClass]="{'visibility-hidden': thankYouMessage}">
+            <div [ngClass]="{'visibility-hidden': thankYouFlag}">
                 <textarea class="request-form__req" name="" id="" cols="" rows="" formControlName="text" placeholder=" "
                     maxlength="150"></textarea>
                 <span [ngClass]="{
@@ -39,7 +39,7 @@
             }" (click)="inputFocus($event)">Заявка*</span>
             </div>
             <button
-                [ngClass]="{'visibility-hidden': thankYouMessage}"
+                [ngClass]="{'visibility-hidden': thankYouFlag}"
                 class="button_light"
                 style="position: relative;"
                 [disabled]="requestForm.invalid || sendButtonDisabled"
