--- a/RemTool/ClientApp/src/app/main-page/main-page.component.html
+++ b/RemTool/ClientApp/src/app/main-page/main-page.component.html
@@ -38,14 +38,14 @@
 <section class="popular">
     <h2 class="main-h2">Популярные услуги</h2>
     <div class="popular__wrapper">
-        <a href="">Замена ствола перфоратора</a>
-        <a href="">Замена щеток в шуруповерте</a>
-        <a href="">Замена подшипника редуктора УШМ</a>
-        <a href="">Заточка ножа триммера</a>
-        <a href="">Заточка цепи бензопилы</a>
-        <a href="">Обслуживание бензогенератора</a>
-        <a href="">Замена выпрямителя в сварочном аппарате</a>
-        <a href="">Регулировка давления компрессора</a>
+        <a [routerLink]="['/tools/electro/60204a293849a51e6c282724']">Замена ствола перфоратора</a>
+        <a [routerLink]="['/tools/electro/5fbd4580f60fe9f911acfc51']">Замена щеток в шуруповерте</a>
+        <a [routerLink]="['/tools/electro/5fafcfaffc3c14750ef09c2c']">Замена подшипника редуктора болгарки</a>
+        <a [routerLink]="['/tools/electro/601838b30a7bf6c0193334f7']">Заточка ножа триммера</a>
+        <a [routerLink]="['/tools/electro/5fec728b343f593d065ac100']">Заточка цепи бензопилы</a>
+        <a [routerLink]="['/tools/electro/6019908c50256c7fd0638ce8']">Замена свечи зажигания бензогенератора</a>
+        <a [routerLink]="['/tools/electro/60201a3f6228a9905411658c']">Замена выпрямителя в сварочном аппарате</a>
+        <a [routerLink]="['/tools/compressor/602017146228a99054116582']">Регулировка давления компрессора</a>
     </div>
 </section>
 
