--- a/RemTool/ClientApp/src/app/shared/we-repair-block/we-repair-block.component.scss
+++ b/RemTool/ClientApp/src/app/shared/we-repair-block/we-repair-block.component.scss
@@ -38,35 +38,35 @@
     }
     &__electro {
         grid-column: 1/4;
-        background-image: url('../../../assets/img/electro-tools.jpg');
+        background-image: url('../../../assets/img/electro-tools.webp');
     }
     &__benzo {
         grid-column: 4/7;
-        background-image: url('../../../assets/img/benzo-tools.jpg');
+        background-image: url('../../../assets/img/benzo-tools.webp');
     }
     &__welding {
         grid-column: 1/3;
-        background-image: url('../../../assets/img/welding.jpg');            
+        background-image: url('../../../assets/img/welding.webp');            
     }
     &__generators {
         grid-column: 3/5;
-        background-image: url('../../../assets/img/generator.jpg');            
+        background-image: url('../../../assets/img/generator.webp');            
     }
     &__compressor {
         grid-column: 5/7;
-        background-image: url('../../../assets/img/compressor.jpg');            
+        background-image: url('../../../assets/img/compressor.webp');            
     }
     &__rest {
         grid-column: 1/3;
-        background-image: url('../../../assets/img/boat-engine.jpg');            
+        background-image: url('../../../assets/img/boat-engine.webp');            
     }
     &__garden {
         grid-column: 3/5;
-        background-image: url('../../../assets/img/garden.jpg');            
+        background-image: url('../../../assets/img/garden.webp');            
     }
     &__heater {
         grid-column: 5/7;
-        background-image: url('../../../assets/img/heater.jpg');            
+        background-image: url('../../../assets/img/heater.webp');            
     }
 }
 
