--- a/RemTool/ClientApp/src/app/swiper/swiper.component.scss
+++ b/RemTool/ClientApp/src/app/swiper/swiper.component.scss
@@ -28,12 +28,12 @@
 
 .consult-slide {
     color: var(--dark-color);
-    background-image: url('../../assets/img/consult.jpg');
+    background-image: url('../../assets/img/consult.webp');
 }
 .diagnostic-slide {
     text-shadow: 0 2px 8px rgba(0,0,0,1);
     color: var(--light-color);
-    background-image: url('../../assets/img//diagnostic.jpg');
+    background-image: url('../../assets/img//diagnostic.webp');
 }
 
 @media (max-width: 683.98px) {
