--- a/RemTool/ClientApp/src/app/swiper-brands/swiper-brands.component.html
+++ b/RemTool/ClientApp/src/app/swiper-brands/swiper-brands.component.html
@@ -4,43 +4,43 @@
     <div class="swiper-wrapper">
         <!-- Slides -->
         <div class="swiper-slide">
-            <img src="../../assets/img/brands/bosch.jpg" alt="">
+            <img src="../../assets/img/brands/bosch.webp" alt="">
         </div>
         <div class="swiper-slide">
-            <img src="../../assets/img/brands/champion.jpg" alt="">
+            <img src="../../assets/img/brands/champion.webp" alt="">
         </div>
         <div class="swiper-slide">
-            <img src="../../assets/img/brands/dewalt.jpg" alt="">
+            <img src="../../assets/img/brands/dewalt.webp" alt="">
         </div>
         <div class="swiper-slide">
-            <img src="../../assets/img/brands/hitachi.jpg" alt="">
+            <img src="../../assets/img/brands/hitachi.webp" alt="">
         </div>
         <div class="swiper-slide">
-            <img src="../../assets/img/brands/husqvarna.jpg" alt="">
+            <img src="../../assets/img/brands/husqvarna.webp" alt="">
         </div>
         <div class="swiper-slide">
-            <img src="../../assets/img/brands/interskol.jpg" alt="">
+            <img src="../../assets/img/brands/interskol.webp" alt="">
         </div>
         <div class="swiper-slide">
-            <img src="../../assets/img/brands/kalibr.jpg" alt="">
+            <img src="../../assets/img/brands/kalibr.webp" alt="">
         </div>
         <div class="swiper-slide">
-            <img src="../../assets/img/brands/makita.jpg" alt="">
+            <img src="../../assets/img/brands/makita.webp" alt="">
         </div>
         <div class="swiper-slide">
-            <img src="../../assets/img/brands/metabo.jpg" alt="">
+            <img src="../../assets/img/brands/metabo.webp" alt="">
         </div>
         <div class="swiper-slide">
-            <img src="../../assets/img/brands/partner.jpg" alt="">
+            <img src="../../assets/img/brands/partner.webp" alt="">
         </div>
         <div class="swiper-slide">
-            <img src="../../assets/img/brands/prorab.jpg" alt="">
+            <img src="../../assets/img/brands/prorab.webp" alt="">
         </div>
         <div class="swiper-slide">
-            <img src="../../assets/img/brands/sparky2.jpg" alt="">
+            <img src="../../assets/img/brands/sparky2.webp" alt="">
         </div>
         <div class="swiper-slide">
-            <img src="../../assets/img/brands/stihl.jpg" alt="">
+            <img src="../../assets/img/brands/stihl.webp" alt="">
         </div>
 
 </div>
