--- a/RemTool/ClientApp/src/app/tool-page/tool-page.component.scss
+++ b/RemTool/ClientApp/src/app/tool-page/tool-page.component.scss
@@ -82,3 +82,9 @@
             text-align: center;
         }
 }
+
+.send-request-btn {
+    width: 100%;
+    max-width: 800px;
+    margin-bottom: 20px;
+}
