--- a/RemTool/ClientApp/src/app/swiper/swiper.component.scss
+++ b/RemTool/ClientApp/src/app/swiper/swiper.component.scss
@@ -24,6 +24,13 @@
     & > img {
         width: 100%;
     }
+    &__social a:first-child {
+        margin-right: 16px;
+    }
+    &__social a {
+        width: fit-content;
+        height: fit-content;
+    }
 }
 
 .consult-slide {
