--- a/RemTool/ClientApp/src/app/swiper/swiper.component.html
+++ b/RemTool/ClientApp/src/app/swiper/swiper.component.html
@@ -37,7 +37,7 @@
                 неисправности
             </p>
             <!-- <app-send-request></app-send-request> -->
-            <button class="button_light" (click)="this.reqService.callMethodOfSecondComponent($event);">Оставить заявку</button>
+            <button class="button_light swiper-request">Оставить заявку</button>
             <!-- <img src="../../assets/img/diagnostic.jpg" alt=""> -->
         </div>
     </div>
