--- a/RemTool/ClientApp/src/app/tool-page/tool-page.component.html
+++ b/RemTool/ClientApp/src/app/tool-page/tool-page.component.html
@@ -13,5 +13,5 @@
             </div>
         </div>
     </div>
-    <button class="button_ok send-request-btn" (click)="sendRequest($event)">Оставить заявку</button>
+    <button class="button_ok send-request-btn" onclick="this.blur()" (click)="sendRequest($event)">Оставить заявку</button>
 </div>
