Изменил почту и номер телефона

--- a/RemTool/ClientApp/src/app/contacts-page/contacts-page.component.html
+++ b/RemTool/ClientApp/src/app/contacts-page/contacts-page.component.html
@@ -17,7 +17,7 @@
     <div class="contacts__item">
         <h3 class="contacts__title">Электронная почта</h3>
         <p class="contacts__text">
-            <a href="mailto:remtool@mail.ru">remtool@mail.ru</a>
+            <a href="mailto:remtul@list.ru">remtul@list.ru</a>
         </p>
     </div>
     <div class="contacts__item">
