--- a/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
+++ b/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
@@ -3,8 +3,8 @@
     <div class="header__topper">
         <span class="header__hours">График работы: пн-пт 10:00-20:00</span>
         <a class="header__adress" target="_blank" href="https://yandex.ru/maps/-/CCUEb2QElD">Наш адрес: г.Москва, МГСА №256</a>
-        <a class="header__mob-phone" href="tel: +7 (926) 247 86 03">
-            +7(926)247-86-03
+        <a class="header__mob-phone" href="tel: +7 (915) 387 29 99">
+            +7(915)3872999
         </a>
         <app-send-request></app-send-request>
     </div>
@@ -233,9 +233,9 @@
                     </div>                </div>
             </li>
             <li class="header__phone">
-                <a href="tel: +7 (926) 247 86 03">
+                <a href="tel: +7 (915) 387 29 99">
                     <img src="assets/img/phone-icon.svg" alt="">
-                    +7(926)247-86-03
+                    +7(915)3872999
                 </a>
             </li>
         </ul>
@@ -335,8 +335,8 @@
             <a [routerLink]="['tools', 'heatgun']">Тепловые пушки</a>
         </div>
         <div class="footer__contacts">
-            <a href="tel: +7 (926) 247 86 03">+7(926)247-86-03</a>
-            <a href="mailto:remtool@mail.ru">remtool@mail.ru</a>
+            <a href="tel: +7 (915) 387 29 99">+7(915)3872999</a>
+            <a href="mailto:remtul@list.ru">remtul@list.ru</a>
             <a target="_blank" href="https://yandex.ru/maps/-/CCUEb2QElD">Наш адрес: г.Москва, МГСА №256</a>
             <!-- <span>пн-пт 10:00-20:00</span> -->
             <table class="contacts__hours">
