--- a/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
+++ b/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
@@ -4,7 +4,7 @@
         <span class="header__hours">График работы: пн-пт 10:00-20:00</span>
         <a class="header__adress" target="_blank" href="https://yandex.ru/maps/-/CCUEb2QElD">Наш адрес: г.Москва, МГСА №256</a>
         <a class="header__mob-phone" href="tel: +7 (915) 387 29 99">
-            +7(915)3872999
+            +7 (915) 387 29 99
         </a>
         <app-send-request></app-send-request>
     </div>
@@ -235,7 +235,7 @@
             <li class="header__phone">
                 <a href="tel: +7 (915) 387 29 99">
                     <img src="assets/img/phone-icon.svg" alt="">
-                    +7(915)3872999
+                    +7 (915) 387 29 99
                 </a>
             </li>
         </ul>
@@ -335,7 +335,7 @@
             <a [routerLink]="['tools', 'heatgun']">Тепловые пушки</a>
         </div>
         <div class="footer__contacts">
-            <a href="tel: +7 (915) 387 29 99">+7(915)3872999</a>
+            <a href="tel: +7 (915) 387 29 99">+7 (915) 387 29 99</a>
             <a href="mailto:remtul@list.ru">remtul@list.ru</a>
             <a target="_blank" href="https://yandex.ru/maps/-/CCUEb2QElD">Наш адрес: г.Москва, МГСА №256</a>
             <!-- <span>пн-пт 10:00-20:00</span> -->
