--- a/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
+++ b/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
@@ -2,9 +2,10 @@
     <!-- <app-top-preloader></app-top-preloader> -->
     <div class="header__topper">
         <span class="header__hours">График работы: пн-пт 10:00-20:00</span>
-        <a class="header__adress" target="_blank" href="https://yandex.ru/maps/-/CCUEb2QElD">Наш адрес: г.Москва, МГСА №256</a>
+        <a class="header__adress" target="_blank" href="https://yandex.ru/maps/-/CCUEb2QElD">Наш адрес: г.Москва, МГСА
+            №256</a>
         <a class="header__mob-phone" href="tel: +7 (915) 387 29 99">
-            +7 (915) 387 29 99
+            {{contactsSettings$.phoneNumber}}
         </a>
         <app-send-request></app-send-request>
     </div>
@@ -25,7 +26,7 @@
                     </svg>
                 </div>
                 <div class="drop-menu" *ngIf="(dropMenuFlag)">
-                <!-- <div class="drop-menu"> -->
+                    <!-- <div class="drop-menu"> -->
                     <div>
                         <div [ngClass]="{'drop-menu__item': true, 'drop-menu__item_hover': sideElectro}"
                             (mouseenter)="arrowRight('electrom')" (mouseleave)="sideElectro = false"
@@ -153,7 +154,7 @@
                                     stroke-linejoin="round" />
                             </svg>
                             <div class="side-drop-menu" *ngIf="sideHeatguns">
-                            <!-- <div class="side-drop-menu"> -->
+                                <!-- <div class="side-drop-menu"> -->
                                 <a *ngFor="let tool of this.tools.heatguns.includedTypes; index as i"
                                     [routerLink]="['tools', 'heatguns', this.tools.heatguns.includedIds[i]]"
                                     (click)="dropMenuHide()">
@@ -191,46 +192,38 @@
             </li>
             <li class="header__search" *ngIf="!searchMobile">
                 <form [formGroup]="searchForm" (input)="searchTool()">
-                    <input formControlName="data"
-                        [(ngModel)]="this.searchForm.value.data"
-                        id="search" type="search"
-                        placeholder={{searchPlaceholder}}
-                        (focus)="searchFocuse = true"
-                        (blur)="searchFocuse = false">
+                    <input formControlName="data" [(ngModel)]="this.searchForm.value.data" id="search" type="search"
+                        placeholder={{searchPlaceholder}} (focus)="searchFocuse = true" (blur)="searchFocuse = false">
                 </form>
-                <svg *ngIf="!searchForm.value.data"
-                width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg *ngIf="!searchForm.value.data" width="20" height="20" viewBox="0 0 20 20" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M19.9399 18.5624L13.4474 12.0699C14.4549 10.7675 14.9999 9.17496 14.9999 7.49997C14.9999 5.49498 14.2174 3.61498 12.8024 2.19749C11.3874 0.779996 9.50246 0 7.49997 0C5.49748 0 3.61248 0.782496 2.19749 2.19749C0.779996 3.61248 0 5.49498 0 7.49997C0 9.50246 0.782496 11.3874 2.19749 12.8024C3.61248 14.2199 5.49498 14.9999 7.49997 14.9999C9.17496 14.9999 10.765 14.4549 12.0674 13.4499L18.5599 19.9399C18.579 19.959 18.6016 19.9741 18.6264 19.9844C18.6513 19.9947 18.678 20 18.7049 20C18.7318 20 18.7585 19.9947 18.7834 19.9844C18.8083 19.9741 18.8309 19.959 18.8499 19.9399L19.9399 18.8524C19.959 18.8334 19.9741 18.8108 19.9844 18.7859C19.9947 18.761 20 18.7343 20 18.7074C20 18.6805 19.9947 18.6538 19.9844 18.6289C19.9741 18.6041 19.959 18.5815 19.9399 18.5624ZM11.46 11.46C10.4 12.5174 8.99496 13.0999 7.49997 13.0999C6.00497 13.0999 4.59998 12.5174 3.53998 11.46C2.48249 10.4 1.89999 8.99496 1.89999 7.49997C1.89999 6.00497 2.48249 4.59748 3.53998 3.53998C4.59998 2.48249 6.00497 1.89999 7.49997 1.89999C8.99496 1.89999 10.4025 2.47999 11.46 3.53998C12.5174 4.59998 13.0999 6.00497 13.0999 7.49997C13.0999 8.99496 12.5174 10.4025 11.46 11.46Z"
                         fill="#131522" />
                 </svg>
-                <button *ngIf="!!searchForm.value.data"
-                    class="search-reset"
-                    (click)="resetSearch()">
+                <button *ngIf="!!searchForm.value.data" class="search-reset" (click)="resetSearch()">
                 </button>
-                <div class="side-drop-menu search-result" *ngIf="(searchFocuse || resultHover) && !!searchForm.value.data">
+                <div class="side-drop-menu search-result"
+                    *ngIf="(searchFocuse || resultHover) && !!searchForm.value.data">
                     <app-top-preloader *ngIf="searchPreloader"></app-top-preloader>
                     <p *ngIf="searchTypes$.length < 1">
                         Ничего не найдено
                     </p>
                     <h4 *ngIf="types.type.length > 0">Инструменты</h4>
                     <div *ngFor="let type of types.type; index as i">
-                        <a [routerLink]="['tools', types.category[i], types.id[i]]"
-                            (click)="resultHover = false"
-                            (mouseover)="resultHover = true"
-                            (mouseout)="resultHover = false">
+                        <a [routerLink]="['tools', types.category[i], types.id[i]]" (click)="resultHover = false"
+                            (mouseover)="resultHover = true" (mouseout)="resultHover = false">
                             {{ type }}
                         </a>
                     </div>
                     <h4 *ngIf="services.type.length > 0">Услуги</h4>
                     <div *ngFor="let service of services.type; index as i">
-                        <a [routerLink]="['tools', services.category[i], services.id[i]]"
-                            (click)="resultHover = false"
-                            (mouseover)="resultHover = true"
-                            (mouseout)="resultHover = false">
+                        <a [routerLink]="['tools', services.category[i], services.id[i]]" (click)="resultHover = false"
+                            (mouseover)="resultHover = true" (mouseout)="resultHover = false">
                             {{ service }}
                         </a>
-                    </div>                </div>
+                    </div>
+                </div>
             </li>
             <li class="header__phone">
                 <a href="tel: +7 (915) 387 29 99">
@@ -241,49 +234,41 @@
         </ul>
         <div class="header__search" *ngIf="searchMobile">
             <form [formGroup]="searchForm" (input)="searchTool()">
-                <input formControlName="data"
-                [(ngModel)]="this.searchForm.value.data"
-                id="search" type="search"
-                placeholder={{searchPlaceholder}}
-                (focus)="searchFocuse = true; burger = false"
-                (blur)="searchFocuse = false">
+                <input formControlName="data" [(ngModel)]="this.searchForm.value.data" id="search" type="search"
+                    placeholder={{searchPlaceholder}} (focus)="searchFocuse = true; burger = false"
+                    (blur)="searchFocuse = false">
             </form>
-            <svg *ngIf="!searchForm.value.data"
-            width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg *ngIf="!searchForm.value.data" width="20" height="20" viewBox="0 0 20 20" fill="none"
+                xmlns="http://www.w3.org/2000/svg">
                 <path
                     d="M19.9399 18.5624L13.4474 12.0699C14.4549 10.7675 14.9999 9.17496 14.9999 7.49997C14.9999 5.49498 14.2174 3.61498 12.8024 2.19749C11.3874 0.779996 9.50246 0 7.49997 0C5.49748 0 3.61248 0.782496 2.19749 2.19749C0.779996 3.61248 0 5.49498 0 7.49997C0 9.50246 0.782496 11.3874 2.19749 12.8024C3.61248 14.2199 5.49498 14.9999 7.49997 14.9999C9.17496 14.9999 10.765 14.4549 12.0674 13.4499L18.5599 19.9399C18.579 19.959 18.6016 19.9741 18.6264 19.9844C18.6513 19.9947 18.678 20 18.7049 20C18.7318 20 18.7585 19.9947 18.7834 19.9844C18.8083 19.9741 18.8309 19.959 18.8499 19.9399L19.9399 18.8524C19.959 18.8334 19.9741 18.8108 19.9844 18.7859C19.9947 18.761 20 18.7343 20 18.7074C20 18.6805 19.9947 18.6538 19.9844 18.6289C19.9741 18.6041 19.959 18.5815 19.9399 18.5624ZM11.46 11.46C10.4 12.5174 8.99496 13.0999 7.49997 13.0999C6.00497 13.0999 4.59998 12.5174 3.53998 11.46C2.48249 10.4 1.89999 8.99496 1.89999 7.49997C1.89999 6.00497 2.48249 4.59748 3.53998 3.53998C4.59998 2.48249 6.00497 1.89999 7.49997 1.89999C8.99496 1.89999 10.4025 2.47999 11.46 3.53998C12.5174 4.59998 13.0999 6.00497 13.0999 7.49997C13.0999 8.99496 12.5174 10.4025 11.46 11.46Z"
                     fill="#131522" />
             </svg>
-            <button *ngIf="!!searchForm.value.data"
-                class="search-reset"
-                (click)="resetSearch()">
+            <button *ngIf="!!searchForm.value.data" class="search-reset" (click)="resetSearch()">
             </button>
-    </div>
-    <div class="side-drop-menu search-result" *ngIf="(searchFocuse || resultHover) && !!searchForm.value.data && searchMobile">
-        <app-top-preloader *ngIf="searchPreloader"></app-top-preloader>
-        <p *ngIf="searchTypes$.length < 1">
-            Ничего не найдено
-        </p>
-        <h4 *ngIf="types.type.length > 0">Инструменты</h4>
-        <div *ngFor="let type of types.type; index as i">
-            <a [routerLink]="['tools', types.category[i], types.id[i]]"
-                (click)="resultHover = false"
-                (mouseover)="resultHover = true"
-                (mouseout)="resultHover = false">
-                {{ type }}
-            </a>
         </div>
-        <h4 *ngIf="services.type.length > 0">Услуги</h4>
-        <div *ngFor="let service of services.type; index as i">
-            <a [routerLink]="['tools', services.category[i], services.id[i]]"
-                (click)="resultHover = false"
-                (mouseover)="resultHover = true"
-                (mouseout)="resultHover = false">
-                {{ service }}
-            </a>
+        <div class="side-drop-menu search-result"
+            *ngIf="(searchFocuse || resultHover) && !!searchForm.value.data && searchMobile">
+            <app-top-preloader *ngIf="searchPreloader"></app-top-preloader>
+            <p *ngIf="searchTypes$.length < 1">
+                Ничего не найдено
+            </p>
+            <h4 *ngIf="types.type.length > 0">Инструменты</h4>
+            <div *ngFor="let type of types.type; index as i">
+                <a [routerLink]="['tools', types.category[i], types.id[i]]" (click)="resultHover = false"
+                    (mouseover)="resultHover = true" (mouseout)="resultHover = false">
+                    {{ type }}
+                </a>
+            </div>
+            <h4 *ngIf="services.type.length > 0">Услуги</h4>
+            <div *ngFor="let service of services.type; index as i">
+                <a [routerLink]="['tools', services.category[i], services.id[i]]" (click)="resultHover = false"
+                    (mouseover)="resultHover = true" (mouseout)="resultHover = false">
+                    {{ service }}
+                </a>
+            </div>
         </div>
-    </div>
-<input id="burger" type="checkbox" [(ngModel)]="burger" *ngIf="searchMobile">
+        <input id="burger" type="checkbox" [(ngModel)]="burger" *ngIf="searchMobile">
         <label for="burger" class="header__nav_mobile" *ngIf="searchMobile">
             <div></div>
             <div></div>
@@ -319,8 +304,8 @@
                     Москве</a> -->
                 <!-- <a href="https://yandex.ru/maps/213/moscow/category/engine_repairs/184106616/?utm_medium=mapframe&utm_source=maps"
                     style="color:#eee;font-size:12px;position:absolute;top:28px;">Ремонт двигателей в Москве</a> -->
-                <iframe *ngIf="map || true" src="https://yandex.ru/map-widget/v1/-/CCUEb2Qz0C" width="600" height="280" frameborder="1"
-                    allowfullscreen="true" style="position:relative;">
+                <iframe *ngIf="map || true" src="https://yandex.ru/map-widget/v1/-/CCUEb2Qz0C" width="600" height="280"
+                    frameborder="1" allowfullscreen="true" style="position:relative;">
                 </iframe>
             </div>
         </div>
@@ -352,9 +337,9 @@
                     <td>вс:</td>
                     <td>вых</td>
                 </tr>
-                
+
             </table>
-    
+
             <div class="footer__messengers">
                 <a href="https://teleg.run/remtool" target="_blank">
                     <svg height="50px" viewBox="0 -39 512.00011 512" width="50px" xmlns="http://www.w3.org/2000/svg">
