--- a/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
+++ b/RemTool/ClientApp/src/app/shared/main-layout/main-layout.component.html
@@ -321,7 +321,7 @@
         </div>
         <div class="footer__contacts">
             <a href="tel: {{contactsSettings$.phoneNumber}}">{{contactsSettings$.phoneNumber}}</a>
-            <a href="mailto:remtul@list.ru">remtul@list.ru</a>
+            <a href="mailto:{{contactsSettings$.email}}">{{contactsSettings$.email}}</a>
             <a target="_blank" href="https://yandex.ru/maps/-/CCUEb2QElD">Наш адрес: г.Москва, МГСА №256</a>
             <!-- <span>пн-пт 10:00-20:00</span> -->
             <table class="contacts__hours">
